[package]
name = "yeet-ops"
version = "1.0.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "An accompanying library for the experimental `do yeet` statement in Rust"
documentation = "https://docs.rs/yeet-ops"
readme = "README.md"
homepage = "https://github.com/ewpratten/yeet-ops"
repository = "https://github.com/ewpratten/yeet-ops"
license = "GPL-3.0"
keywords = ["yeet", "do yeet", "macros"]
categories = ["no-std", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
